--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>T!book</title>
-    <link rel="stylesheet" href="stylePage1.css">
+    <link rel="stylesheet" href="styles/stylePage1.css">
 </head>
 <body>
     <!-- <div class="contain">
